<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('brief_projets', function (Blueprint $table) {
            $table->id('brief_projet_id');
            $table->string('titre');
            $table->text('description')->nullable();
            $table->string('statut');
            $table->foreignId('module_id')->constrained('modules', 'module_id')->onDelete('cascade');
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('brief_projets');
    }
};
